2020-04-27  Robby Stephenson  <robby@periapsis.org>

	* Tweaked game platform normalization to match "Nintento Game Boy".

2020-04-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed error in ISO-5426 conversion (Bug 420451).

2020-04-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.

2020-04-21  Robby Stephenson  <robby@periapsis.org>

	* Updated GiantBomb API endpoint.
	* Updated IBS data source.

2020-04-19  Robby Stephenson  <robby@periapsis.org>

	* Updated kino.de data source.
	* Updated KinoPoisk data source.
	* Updated Kino-Teatr data source.

2020-04-14  Robby Stephenson  <robby@periapsis.org>

	* Updated BiblioShare API end point.

2020-04-12  Robby Stephenson  <robby@periapsis.org>

	* Updated ISO-5426 converter.

2020-04-05  Robby Stephenson  <robby@periapsis.org>

	* Updated z3950fetcher to separate query and response character encoding (Bug 419670).

2020-03-28  Robby Stephenson  <robby@periapsis.org>

	* Improved audio file data importer to use Album Artist (Bug 419348).
	* Added notification if user agent is diabled and data source
	requires it (Bug 419319).

2020-02-28  Robby Stephenson  <robby@periapsis.org>

	* Updated data source endpoint for TheGamesDB.net.

2020-02-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with writing invalid XML names (Bug 418067).

 2020-02-15  Robby Stephenson  <robby@periapsis.org>

	* Updated Amazon data source to PA-API v5.

2020-01-25  Robby Stephenson  <robby@periapsis.org>

	* Improved MobyGames fetcher (Bug 416718).

2019-12-10  Robby Stephenson  <robby@periapsis.org>

	* Added data source for colnect.net.

2019-11-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed performance regression when loading data file.
	* Released Tellico 3.2.3.

2019-11-09  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.2.2.

2019-10-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to revert to behavior of selecting newly added entries (Bug 413217).
