@@ -78,3 +78,6 @@ Custom Fields=origtitle,kinoteatr
 
 [colnect]
 Custom Fields=obverse,reverse,series,mintage,description
+
+[colnect stamps]
+Custom Fields=image,series,description,stanley-gibbons,michel
