@@ -1,3 +1,7 @@
+2020-05-11  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated Colnect data source to include stamp collections.
+
 2020-04-27  Robby Stephenson  <robby@periapsis.org>
 
 	* Tweaked game platform normalization to match "Nintento Game Boy".
